# neckfrac-streamlit-app

./: .gitignore  README.md  pyproject.toml
capstone/: .gitignore  pyproject.toml
capstone/capstone/: app.py
