[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Jane Hung <janehung16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.6.0"
seaborn = "0.12.1"
ipython = "^8.6.0"
ipykernel = "^6.17.0"
sklearn = "^0.0"
streamlit = "^1.14.0"
watchdog = "^2.1.9"
pydicom = "^2.3.0"
simpleitk = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
